--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "framer-motion": "^12.9.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.507.0",
+    "mysql2": "^3.14.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
@@ -19,6 +22,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
