--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.9.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.507.0",
